tests/files/type_checker_tests/should_fail/090.cmdr
//Should fail indexing something other than array or tuple
x = true[1];
